# darwin-config

./: .envrc  .gitignore  .nvimlog  AGENTS.md  CLAUDE-agent-rules.md  CLAUDE-development-tools-integration.md  CLAUDE-important-implementation-notes.md  CLAUDE-lisp-like-languages-validation-command-line-tools.md  CLAUDE-ns-and-nb-aliases-to-build-switch-and-build-respectively-my-darwin-configuration-nix-based.md  CLAUDE-security-considerations.md  CLAUDE-stow-should-put-resulting-script-targets-in-local-share-bin.md  CLAUDE-terminal-and-gui-environments-for-emacs.md  CLAUDE.md  CLAUDE2.md  EDITOR-XCODE-BETA-UPDATES.md  MULTI-USER-SETUP.md  NUSHELL-DEBUGGING-RULES.md  README.md  RUST_CLAUDE.md  SECRETS-MANAGEMENT.md  WARP.md  WORK-CONFIGURATION.md  XCODE-BETA-MIGRATION.md  ZED-STOW-PACKAGE-SUMMARY.md  agent-rules.md  darwin-config-path.nix  fish-emacs-functions.fish  fish-interactive-init.fish  fish-login-init.fish  flake.nix  formula-comparison.md  jank-upstream-changes-completed.md  multiple-detection-methods-rule.md  next-steps-action-plan.md  pr-recommendations.md  pr-response-draft.md  system.nix  system.nix.backup  upstream-cmake-improvements.patch  upstream-processor-improvement.patch  (+1 more)
claude/: CLAUDE-agent-rules.md  CLAUDE-applying-diffs-patches-or-changes-to-programming-files.md  CLAUDE-code-architecture.md  CLAUDE-common-patterns.md  CLAUDE-correct-characters-for-comments-on-different-programming-languages.md  CLAUDE-nordvpn.md  (+17 more)
modules/emacs-pinning/rust/: Cargo.toml
modules/emacs-pinning/rust/src/: lib.rs  main.rs
python-env/: pixi.toml  pyproject.toml
(+298 files in other folders)
